--- a/app/src/main/res/layout/fragment_summary.xml
+++ b/app/src/main/res/layout/fragment_summary.xml
@@ -22,6 +22,9 @@
         <variable
             name="viewModel"
             type="com.project.cupcakeappfinal.model.OrderViewModel" />
+        <variable
+            name="summaryFragment"
+            type="com.project.cupcakeappfinal.SummaryFragment"/>
     </data>
 
     <ScrollView
@@ -132,6 +135,7 @@
                 android:id="@+id/send_button"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:onClick="@{()-> summaryFragment.sendOrder()}"
                 android:layout_marginTop="@dimen/side_margin"
                 android:text="@string/send" />
 
